--- a/src/pages/Chat/components/ChatWindow/ChatWindow.scss
+++ b/src/pages/Chat/components/ChatWindow/ChatWindow.scss
@@ -1,9 +1,9 @@
 .chat-body{
     height: 87vh;
-    @media (max-width:1199.98px) {
-        height: 100vh;
+    // @media (max-width:1199.98px) {
+    //     height: 100vh;
        
-    }
+    // }
 }
 .simplebar-content{
     height: 76vh;
