fix hight issue

--- a/src/pages/Chat/components/ChatWindow/ChatWindow.scss
+++ b/src/pages/Chat/components/ChatWindow/ChatWindow.scss
@@ -10,7 +10,8 @@
     padding: 20px;
     overflow-y: scroll;
     @media (max-width:1199.98px) {
-        height: 87vh;
+        // height: 87vh;
+        height: calc(100vh - 69px);
        
     }
 }
